[UPD] add fields (children, parents) option
